// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Button component Renders a button which has an icon, text and dropdown arrow 1`] = `
<button
  className="btn--primary"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon__search-title"
    role="img"
  >
    <title>
      search
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-search"
    />
  </svg>
  <span
    className="btn__text"
  >
    Button
  </span>
  <svg
    aria-labelledby="icon__triangle-down-title"
    role="img"
  >
    <title>
      triangle-down
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-triangle-down"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a button which has dropdown arrow 1`] = `
<button
  className="btn--primary"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon__triangle-down-title"
    role="img"
  >
    <title>
      triangle-down
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-triangle-down"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a button which has just a large icon 1`] = `
<button
  className="btn--primary"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon__search-title"
    role="img"
  >
    <title>
      search
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-search"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a button which has just a normal icon 1`] = `
<button
  className="btn--primary"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon__search-title"
    role="img"
  >
    <title>
      search
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-search"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a button which has just a small icon 1`] = `
<button
  className="btn--primary"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon__search-title"
    role="img"
  >
    <title>
      search
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-search"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a button which has just a xlarge icon 1`] = `
<button
  className="btn--primary"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon__search-title"
    role="img"
  >
    <title>
      search
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-search"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a button which has just a xsmall icon 1`] = `
<button
  className="btn--primary"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon__search-title"
    role="img"
  >
    <title>
      search
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-search"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a button which has just an icon 1`] = `
<button
  className="btn--primary"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-labelledby="icon__search-title"
    role="img"
  >
    <title>
      search
    </title>
    <use
      pointerEvents="none"
      xlinkHref="#icons-search"
    />
  </svg>
</button>
`;

exports[`The Button component Renders a error button when type is error 1`] = `
<button
  className="btn--error"
  onClick={[Function]}
  type="button"
>
  <span
    className="btn__text"
  >
    Button
  </span>
</button>
`;

exports[`The Button component Renders a primary button when no arguments are passed 1`] = `
<button
  className="btn--primary"
  onClick={[Function]}
  type="button"
/>
`;

exports[`The Button component Renders a primary button when type is primary 1`] = `
<button
  className="btn--primary"
  onClick={[Function]}
  type="button"
>
  <span
    className="btn__text"
  >
    Button
  </span>
</button>
`;

exports[`The Button component Renders a secondary button when type is secondary 1`] = `
<button
  className="btn--secondary"
  onClick={[Function]}
  type="button"
>
  <span
    className="btn__text"
  >
    Button
  </span>
</button>
`;

exports[`The Button component Renders a success button when type is success 1`] = `
<button
  className="btn--success"
  onClick={[Function]}
  type="button"
>
  <span
    className="btn__text"
  >
    Button
  </span>
</button>
`;
